# jppdf

./: .gitignore  README.md  pyproject.toml
src/jppdf/: cli.py
src/pdfjp/: cli.py
