[project]
name = "jppdf"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "take0x"}
]
dependencies = [
    "selenium>=4.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
jppdf = "jppdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.1.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jppdf"]

[tool.mypy]
strict = true
disallow_untyped_calls = false

[tool.ruff]
target-version = "py312"
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "ANN1",    # Missing type annotation for 'self' and 'cls'
]
