[project]
name = "pdfjp"
version = "0.1.0"
description = "A tool to translate your PDF files into Japanese"
authors = [
    {name = "take0x"}
]
dependencies = [
    "selenium>=4.16.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
pdfjp = "pdfjp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "types-requests>=2.31.0.20240106",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdfjp"]

[tool.mypy]
strict = true
disallow_untyped_calls = false

[tool.ruff]
target-version = "py312"
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "ANN1",    # Missing type annotation for 'self' and 'cls'
]
